--- a/final-animation.html
+++ b/final-animation.html
@@ -105,24 +105,24 @@
 </head>
 <body>
   <div class="section">
-    <img class="logo" src="images/logo.png" alt="">
+    <img class="logo" src="logo.png" alt="">
     <div class="image-grid" id="imageGrid">
-      <img src="images/image-1.jpg" />
-      <img src="images/image-2.jpg" />
-      <img src="images/image-3.jpg" />
-      <img src="images/image-4.jpg" />
-      <img src="images/image-5.jpg" />
-      <img src="images/image-6.jpg" />
-      <img src="images/image-7.jpg" />
-      <img src="images/image-8.jpg" />
-      <img src="images/image-10.jpg" />
-      <img src="images/image-11.jpg" />
-      <img src="images/image-12.jpg" />
-      <img src="images/image-4.jpg" />
-      <img src="images/image-5.jpg" />
-      <img src="images/image-8.jpg" />
-      <img src="images/image-2.jpg" />
-      <img src="images/image-9.jpg" />
+      <img src="image-1.jpg" />
+      <img src="image-2.jpg" />
+      <img src="image-3.jpg" />
+      <img src="image-4.jpg" />
+      <img src="image-5.jpg" />
+      <img src="image-6.jpg" />
+      <img src="image-7.jpg" />
+      <img src="image-8.jpg" />
+      <img src="image-10.jpg" />
+      <img src="image-11.jpg" />
+      <img src="image-12.jpg" />
+      <img src="image-4.jpg" />
+      <img src="image-5.jpg" />
+      <img src="image-8.jpg" />
+      <img src="image-2.jpg" />
+      <img src="image-9.jpg" />
     </div>
 
     <div class="text">
